[gd_scene load_steps=60 format=3 uid="uid://bqnfws5511sik"]

[ext_resource type="Script" path="res://scripts/map2.gd" id="1_ppmkr"]
[ext_resource type="Texture2D" uid="uid://b0cp8jmm7lujr" path="res://assets/map/map_assets/0. World map road background.png" id="1_w0njp"]
[ext_resource type="Texture2D" uid="uid://cq6al3y0fc0f1" path="res://assets/map/map_assets/skyline.png" id="2_3bp7v"]
[ext_resource type="Texture2D" uid="uid://bg5i7spvdqo16" path="res://assets/map/map_assets/1. World map road.png" id="3_wejge"]
[ext_resource type="Texture2D" uid="uid://x1qvegpr7glh" path="res://assets/map/map_assets/2. World map coast.png" id="4_2ueqx"]
[ext_resource type="Texture2D" uid="uid://btox3yeow3c5" path="res://assets/map/map_assets/3. World map pier.png" id="5_j1egg"]
[ext_resource type="Texture2D" uid="uid://6q8hn0yf2k0e" path="res://assets/map/map_assets/4. World map cartwheel.png" id="7_hk4tv"]
[ext_resource type="Texture2D" uid="uid://6s7i7v2dwv7o" path="res://assets/map/map_assets/5. World map park.png" id="9_35oxw"]
[ext_resource type="Script" path="res://scripts/4_WorldMapCartwheel2.gd" id="9_oh4ao"]
[ext_resource type="Script" path="res://scripts/5_WorldMapPark2.gd" id="11_8kja8"]
[ext_resource type="Texture2D" uid="uid://cfk6wfrr052g0" path="res://assets/map/map_assets/6. World map tent.png" id="11_isjm0"]
[ext_resource type="Shader" path="res://shaders/map1.gdshader" id="13_di6jh"]
[ext_resource type="Texture2D" uid="uid://c0xrfediwjr3x" path="res://assets/map/map_assets/7. World map tavern.png" id="14_tr5m1"]
[ext_resource type="Texture2D" uid="uid://ciof0la0ywiq7" path="res://assets/map/map_assets/8. World map library.png" id="16_s5xju"]
[ext_resource type="Texture2D" uid="uid://dtypq18x3hvmt" path="res://assets/map/map_assets/9 World Map forest.png" id="18_28e2m"]
[ext_resource type="Script" path="res://scripts/10WorldMapFarm2.gd" id="19_lppe4"]
[ext_resource type="Texture2D" uid="uid://4wlklg3hkgur" path="res://assets/map/map_assets/10 World Map farm.png" id="19_w85hl"]
[ext_resource type="Script" path="res://scenes/11WorldMapForest2.gd" id="20_qh4cx"]
[ext_resource type="Texture2D" uid="uid://bb2o7sua3kmj5" path="res://assets/map/map_assets/11 World Map forest2.png" id="21_jhq5j"]
[ext_resource type="Texture2D" uid="uid://mce4mh4k0jd3" path="res://assets/map/map_assets/12 World Map wizard tower.png" id="22_a2sa6"]
[ext_resource type="Script" path="res://scripts/12WorldMapWizardTower2.gd" id="22_pg7q0"]
[ext_resource type="Texture2D" uid="uid://8sdoqjjyei4b" path="res://assets/map/map_assets/13 World Map castle.png" id="24_2jx6n"]
[ext_resource type="Texture2D" uid="uid://dinomf8gaiitr" path="res://assets/map/map_assets/14 World Map house1.png" id="25_bpe0i"]
[ext_resource type="Texture2D" uid="uid://dcentpqd2ungw" path="res://assets/map/map_assets/15 World Map pharmacy.png" id="26_k0yoa"]
[ext_resource type="Script" path="res://scripts/16WorldMapCityCenter2.gd" id="28_g0xxf"]
[ext_resource type="Texture2D" uid="uid://3qxxc5qu680b" path="res://assets/map/map_assets/16 World Map city center.png" id="28_ymgj2"]
[ext_resource type="Texture2D" uid="uid://ceer4vjekaap3" path="res://assets/map/map_assets/17 World Map house2.png" id="30_7avx4"]
[ext_resource type="Texture2D" uid="uid://bdvyot2iycq2m" path="res://assets/map/map_assets/18 World Map house3.png" id="31_1raa6"]
[ext_resource type="Texture2D" uid="uid://c4k0l4us0fx0n" path="res://assets/map/map_assets/19 World Map Mayors house.png" id="32_xdbv5"]
[ext_resource type="Texture2D" uid="uid://cdi1i7jgaw7r3" path="res://assets/ui/Modal_textbox_base.png" id="33_fw15a"]
[ext_resource type="AudioStream" uid="uid://lj6swujy3h3d" path="res://assets/music/main_menu(VOLATOK).mp3" id="33_k45vj"]
[ext_resource type="Script" path="res://scenes/6_WorldMapTent.gd" id="34_08rgh"]
[ext_resource type="Texture2D" uid="uid://dujb2un7bysiv" path="res://assets/map/map_assets/20 World Map forest3.png" id="34_mhnj0"]
[ext_resource type="Texture2D" uid="uid://d0od8kvq4r337" path="res://assets/ui/Modal_no_button_h – kopio.png" id="34_t5xwd"]
[ext_resource type="Texture2D" uid="uid://crurf5dm2fyy4" path="res://assets/map/map_assets/21 World Map mood lighting.png" id="35_krajd"]
[ext_resource type="Texture2D" uid="uid://282wtnamsuq3" path="res://assets/ui/Modal_no_button_default – kopio.png" id="35_vojq6"]
[ext_resource type="Texture2D" uid="uid://cx4h2xbrhy7ny" path="res://assets/ui/Modal_yes_button_h.png" id="36_i4pvm"]
[ext_resource type="Texture2D" uid="uid://cm781vdpyet6y" path="res://assets/ui/Modal_yes_button_default.png" id="37_tjldk"]
[ext_resource type="FontFile" uid="uid://deon8ctwm8aae" path="res://credits-scene/Autour_One/AutourOne-Regular.ttf" id="38_gp6sv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6vrjm"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_avkg3"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_504wn"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4sxv0"]
resource_name = "tavernshader"
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4fgo"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4vju"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hna3i"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0qe8"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obx8c"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yd5eg"]
shader = ExtResource("13_di6jh")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rxjfy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ymxlg"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("34_t5xwd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhh2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i72ev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yg5s4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umvhc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tdni8"]
texture = ExtResource("36_i4pvm")
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7bnjm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihho8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7dpa"]

[node name="map2" type="Node2D"]
position = Vector2(314, 146)
script = ExtResource("1_ppmkr")

[node name="0_WorldMapRoadBackground" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("1_w0njp")

[node name="Skyline" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("2_3bp7v")

[node name="1_WorldMapRoad" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("3_wejge")

[node name="2_WorldMapCoast" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("4_2ueqx")

[node name="3_WorldMapPier" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_6vrjm")
use_parent_material = true
position = Vector2(646, 394.5)
scale = Vector2(6, 5.99444)
texture = ExtResource("5_j1egg")

[node name="4_WorldMapCartwheel" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("7_hk4tv")
script = ExtResource("9_oh4ao")

[node name="Area2D" type="Area2D" parent="4_WorldMapCartwheel"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="4_WorldMapCartwheel/Area2D"]
polygon = PackedVector2Array(-159.333, 44.8333, -152.167, 40.6667, -141.667, 46.6667, -141.667, 49.6667, -147, 54.8333, -158.833, 49.8333)

[node name="5_WorldMapPark" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_avkg3")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("9_35oxw")
script = ExtResource("11_8kja8")

[node name="Park" type="Area2D" parent="5_WorldMapPark"]
position = Vector2(0, 0.138885)
scale = Vector2(1, 0.998456)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5_WorldMapPark/Park"]
position = Vector2(5.27779, 61.6667)
polygon = PackedVector2Array(10.5556, 13.8889, 12.7778, 3.05556, 30.2778, -14.4444, 44.4444, -20, 58.8889, -21.6667, 70.2778, -19.7222, 79.4444, -13.0556, 88.3333, -11.6667, 90.8333, -16.9444, 105, -18.8889, 116.389, -16.9444, 127.5, -4.44444, 110.556, 24.4444)

[node name="6_WorldMapTent" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_504wn")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("11_isjm0")
script = ExtResource("34_08rgh")

[node name="Tent" type="Area2D" parent="6_WorldMapTent"]
position = Vector2(0, 0.138885)
scale = Vector2(1, 0.998455)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="6_WorldMapTent/Tent"]
polygon = PackedVector2Array(137.5, 62.7357, 132.778, 66.6306, 127.778, 74.6986, 127.778, 76.3679, 125.833, 79.4281, 126.111, 81.932, 136.111, 81.932, 144.167, 70.5255)

[node name="7_WorldMapTavern" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_4sxv0")
use_parent_material = true
position = Vector2(646, 394.5)
scale = Vector2(6, 5.99444)
texture = ExtResource("14_tr5m1")

[node name="8_WorldMapLibrary" type="Sprite2D" parent="."]
z_as_relative = false
texture_filter = 1
material = SubResource("ShaderMaterial_k4fgo")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("16_s5xju")

[node name="9WorldMapForest" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("18_28e2m")

[node name="10WorldMapFarm" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_m4vju")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("19_w85hl")
script = ExtResource("19_lppe4")

[node name="Area2D" type="Area2D" parent="10WorldMapFarm"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="10WorldMapFarm/Area2D"]
polygon = PackedVector2Array(81.1667, -34.5, 73.1667, -28.8333, 73.1667, -18.8333, 75, -17.8333, 94.3333, -13.3333, 111, -20.6667, 111.167, -27.5, 103.5, -31.1667)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="10WorldMapFarm/Area2D"]
polygon = PackedVector2Array(115.167, -18.1667, 115, -24.1667, 124.667, -29.6667, 159.833, -30, 160, -17.5, 158.833, -15.1667, 151.167, -15, 134.5, -14.6667, 124.667, -15.1667)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="10WorldMapFarm/Area2D"]
polygon = PackedVector2Array(104.167, -11.1667, 95.6667, -4, 99, -0.833328, 112, 2, 126.833, 4, 151, 3, 159.667, -6.33333, 159.667, -10.1667, 130.333, -10.8333)

[node name="11WorldMapForest2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("21_jhq5j")
script = ExtResource("20_qh4cx")

[node name="Area2D" type="Area2D" parent="11WorldMapForest2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="11WorldMapForest2/Area2D"]
polygon = PackedVector2Array(159.833, 3.83334, 96.8333, 4.33334, 97.8333, 16.1667, 96.5, 21.1667, 94.8333, 18.3333, 93, 11.5, 91.3333, 19.5, 88.1667, 17.6667, 88, 21.8333, 90.6667, 27.3333, 94.8333, 28.5, 92.1667, 32.8333, 91.8333, 38.6667, 86.8333, 38.6667, 84.3333, 34.5, 84.6667, 40.3333, 96.1667, 48.6667, 97.6667, 43.6667, 107, 43.3333, 117.833, 42.5, 123.833, 46.1667, 133, 55.5, 145.833, 66.1667, 147.667, 75.8333, 144.167, 72.6667, 142.833, 78.1667, 146, 82.1667, 152, 77.1667, 152.833, 72.3333, 157.833, 69.6667, 160.167, 69.1667)

[node name="12WorldMapWizardTower" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_hna3i")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("22_a2sa6")
script = ExtResource("22_pg7q0")

[node name="Area2D" type="Area2D" parent="12WorldMapWizardTower"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="12WorldMapWizardTower/Area2D"]
polygon = PackedVector2Array(-83.8333, -87, -79.8333, -87.1667, -78, -78.6667, -76.8333, -69.3333, -76.1667, -64.3333, -87.6667, -64.6667, -86, -69, -84.6667, -78.3333)

[node name="13WorldMapCastle" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 395)
scale = Vector2(5.99688, 6)
texture = ExtResource("24_2jx6n")

[node name="14WorldMapShop" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("25_bpe0i")

[node name="15WorldMapPharmacy" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_s0qe8")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("26_k0yoa")

[node name="16WorldMapCityCenter" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_obx8c")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("28_ymgj2")
script = ExtResource("28_g0xxf")

[node name="Area2D" type="Area2D" parent="16WorldMapCityCenter"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="16WorldMapCityCenter/Area2D"]
polygon = PackedVector2Array(-20.5, -19.3333, -31.5, -9.33333, -33, -8, -36.1667, -6.5, -39, -3.83333, -39.1667, -1.33333, -44.6667, 1.66667, -45.6667, 4.5, -51, 7.33334, -52.1667, 8.33334, -52.1667, 10.5, -56.6667, 13, -57.8333, 14.5, -57.8333, 30.5, -54.1667, 37.5, -60.1667, 44.1667, -59.8333, 48.6667, -57.3333, 52.1667, -53.1667, 54, -47.6667, 55.1667, -38.1667, 55, -33.3333, 53.3333, -30.1667, 51.8333, -29.3333, 50.3333, -28, 50, -28, 46.8333, -27.8333, 44.1667, -29.6667, 43, -23.6667, 39.3333, -4.33333, 45.6667, 35.1667, 6.66667, 35.1667, -8.83333, 31.3333, -7.66666, 23.8333, -2.66666, 20.3333, 1.33334, 13.5, 1, 13.5, -9.66666, 6.83334, -11, 7.16667, -16, 4.5, -16.1667, 0, -13.8333, -4.83333, -10.5, -5.83333, -8.66666, -14.8333, -3.66666, -15, -15.3333)

[node name="17WorldMapHouse2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("30_7avx4")

[node name="18WorldMapHouse3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("31_1raa6")

[node name="19WorldMapMayorsHouse" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yd5eg")
use_parent_material = true
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("32_xdbv5")

[node name="20WorldMapForest3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("34_mhnj0")

[node name="21WorldMapMoodLighting" type="Sprite2D" parent="."]
position = Vector2(646, 394)
scale = Vector2(6, 6)
texture = ExtResource("35_krajd")

[node name="Warning" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(646, 394.5)
scale = Vector2(1, 1.00093)
texture = ExtResource("33_fw15a")

[node name="ModalNoButtonH–Kopio" type="Sprite2D" parent="Warning"]
position = Vector2(202, 157.354)
scale = Vector2(1, 0.999075)
texture = ExtResource("34_t5xwd")

[node name="ModalNoButtonDefault–Kopio" type="Sprite2D" parent="Warning"]
position = Vector2(202, 157.354)
scale = Vector2(1, 0.999075)
texture = ExtResource("35_vojq6")

[node name="WarningNoButton" type="Button" parent="Warning/ModalNoButtonDefault–Kopio"]
offset_left = -135.0
offset_top = -49.0
offset_right = 134.0
offset_bottom = 49.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_rxjfy")
theme_override_styles/hover = SubResource("StyleBoxTexture_ymxlg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mhh2b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i72ev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yg5s4")

[node name="ModalYesButtonH" type="Sprite2D" parent="Warning"]
position = Vector2(-201, 157.354)
scale = Vector2(1, 0.999075)
texture = ExtResource("36_i4pvm")

[node name="ModalYesButtonDefault" type="Sprite2D" parent="Warning"]
position = Vector2(-200, 157.354)
scale = Vector2(1, 0.999075)
texture = ExtResource("37_tjldk")

[node name="WarningYesButton" type="Button" parent="Warning/ModalYesButtonDefault"]
offset_left = -133.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = 49.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_umvhc")
theme_override_styles/hover = SubResource("StyleBoxTexture_tdni8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7bnjm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ihho8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c7dpa")

[node name="RichTextLabel" type="RichTextLabel" parent="Warning"]
offset_left = -415.0
offset_top = -122.387
offset_right = 418.0
offset_bottom = 106.613
theme_override_colors/default_color = Color(0.269531, 0.203125, 0.113281, 1)
theme_override_fonts/normal_font = ExtResource("38_gp6sv")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Are you sure you’ve explored the village thoroughly? You will not be able to go back and explore Harmony Valley after this point. 

Do you wish to continue?"
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_k45vj")
autoplay = true

[connection signal="input_event" from="4_WorldMapCartwheel/Area2D" to="4_WorldMapCartwheel" method="_on_area_2d_input_event"]
[connection signal="input_event" from="5_WorldMapPark/Park" to="5_WorldMapPark" method="_on_park_input_event"]
[connection signal="mouse_entered" from="5_WorldMapPark/Park" to="5_WorldMapPark" method="_on_park_mouse_entered"]
[connection signal="mouse_exited" from="5_WorldMapPark/Park" to="5_WorldMapPark" method="_on_park_mouse_exited"]
[connection signal="input_event" from="6_WorldMapTent/Tent" to="6_WorldMapTent" method="_on_tent_input_event"]
[connection signal="mouse_entered" from="6_WorldMapTent/Tent" to="6_WorldMapTent" method="_on_tent_mouse_entered"]
[connection signal="mouse_exited" from="6_WorldMapTent/Tent" to="6_WorldMapTent" method="_on_tent_mouse_exited"]
[connection signal="input_event" from="10WorldMapFarm/Area2D" to="10WorldMapFarm" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="10WorldMapFarm/Area2D" to="10WorldMapFarm" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="10WorldMapFarm/Area2D" to="10WorldMapFarm" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="11WorldMapForest2/Area2D" to="11WorldMapForest2" method="_on_area_2d_input_event"]
[connection signal="input_event" from="12WorldMapWizardTower/Area2D" to="12WorldMapWizardTower" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="12WorldMapWizardTower/Area2D" to="12WorldMapWizardTower" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="12WorldMapWizardTower/Area2D" to="12WorldMapWizardTower" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="16WorldMapCityCenter/Area2D" to="16WorldMapCityCenter" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="16WorldMapCityCenter/Area2D" to="16WorldMapCityCenter" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="16WorldMapCityCenter/Area2D" to="16WorldMapCityCenter" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Warning/ModalNoButtonDefault–Kopio/WarningNoButton" to="5_WorldMapPark" method="_on_warning_no_button_mouse_entered"]
[connection signal="pressed" from="Warning/ModalNoButtonDefault–Kopio/WarningNoButton" to="5_WorldMapPark" method="_on_warning_no_button_pressed"]
[connection signal="mouse_entered" from="Warning/ModalYesButtonDefault/WarningYesButton" to="5_WorldMapPark" method="_on_warning_yes_button_mouse_entered"]
[connection signal="pressed" from="Warning/ModalYesButtonDefault/WarningYesButton" to="5_WorldMapPark" method="_on_warning_yes_button_pressed"]
